welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: reassignment to val
  if (isBirthday==true) {speed=speed+5}
                              ^